import uuid
from django.db import models
from django.conf import settings


class Certificado(models.Model):
    ESTADO_CHOICES = [
        ('pendiente', 'Pendiente'),
        ('aprobado', 'Aprobado'),
        ('rechazado', 'Rechazado'),
        ('revocado', 'Revocado'),
        ('expirado', 'Expirado'),
    ]

    usuario = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.CASCADE,
        related_name='certificados'
    )
    curso = models.ForeignKey('cursos.Curso', on_delete=models.CASCADE, related_name='certificados')
    codigo_verificacion = models.UUIDField(default=uuid.uuid4, unique=True, editable=False)
    fecha_emision = models.DateTimeField(auto_now_add=True)
    archivo_pdf = models.FileField(upload_to='certificados/', null=True, blank=True)
    estado = models.CharField(
        max_length=20,
        choices=ESTADO_CHOICES,
        default='pendiente'
    )
    fecha_aprobacion = models.DateTimeField(null=True, blank=True)
    fecha_vencimiento = models.DateTimeField(
        null=True, blank=True,
        help_text='Fecha de vencimiento del certificado. Nulo = sin vencimiento'
    )
    motivo_revocacion = models.TextField(
        blank=True, null=True,
        help_text='Motivo de la revocación del certificado'
    )
    aprobado_por = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name='certificados_aprobados'
    )

    class Meta:
        verbose_name = 'Certificado'
        verbose_name_plural = 'Certificados'
        indexes = [
            models.Index(fields=['estado']),
        ]

    def __str__(self):
        return f"Certificado {self.usuario} - {self.curso.titulo} ({self.get_estado_display()})"
